--- a/CMH-Beta/pom.xml
+++ b/CMH-Beta/pom.xml
@@ -76,5 +76,10 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.8</version>
+		</dependency>
 	</dependencies>
 </project>
