--- a/CMH-Beta/src/log4j.properties
+++ b/CMH-Beta/src/log4j.properties
@@ -4,6 +4,7 @@ log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
 log4j.appender.STDOUT.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
 log4j.logger.mx.com.stsystems=debug,file
+log4j.logger.org.springframework.jdbc.core = TRACE,file
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=CMHSS-Beta.log
